the web application is not responsive Fixes #19

--- a/src/Layout/Header.module.css
+++ b/src/Layout/Header.module.css
@@ -24,8 +24,3 @@
   height: 100%;
   object-fit: cover;
 }
-@media (max-width: 920px) {
-  .header {
-
-  }
-}
