--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 margin: 0 auto;
     box-sizing: border-box;
 }
+#overlays {
+  height: 0;
+}
 html {
     overflow-x: hidden;
     overflow-y: auto;
